# simple_powershell_logger

./: .gitignore  README.md
simple-powershell_logger/: pyproject.toml
simple-powershell_logger/ansible/: deploy_exe_logger.yml  deploy_log_server.yml  deploy_py_logger.yml  log_server_demo.ini  windows_test.ini
simple-powershell_logger/ansible/roles/deploy_py_logger/defaults/: main.yml
simple-powershell_logger/ansible/roles/deploy_py_logger/handlers/: main.yml
simple-powershell_logger/ansible/roles/deploy_py_logger/tasks/: main.yml  onefile.yml
simple-powershell_logger/ansible/roles/deploy_py_logger/tests/: test.yml
simple-powershell_logger/ansible/roles/deploy_py_logger/vars/: main.yml
simple-powershell_logger/ansible/roles/log_server/defaults/: main.yml
simple-powershell_logger/ansible/roles/log_server/handlers/: main.yml
simple-powershell_logger/ansible/roles/log_server/tasks/: main.yml
simple-powershell_logger/ansible/roles/log_server/templates/: discord_worker.py.j2  gun_log_server.service.j2  log_server.py.j2  log_server.service.j2  nginx.conf.j2
simple-powershell_logger/ansible/roles/log_server/tests/: test.yml
simple-powershell_logger/ansible/roles/log_server/vars/: main.yml
simple-powershell_logger/src/simple_powershell_logger/: client_utils.py  log_server.py  read_powershell_history.py  server_utils.py
