[project]
name = "simple-powershell-logger"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric Tang",email = "eyt7663@g.rit.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog (>=6.0.0,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "simple_powershell_logger", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
